1.3.1 - Quick fix for embed thumbnail stretching

--- a/twitter/twitter-tweaks.user.css
+++ b/twitter/twitter-tweaks.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Twitter Tweaks
-@version        1.3.0
+@version        1.3.1
 @description    Uncrop images, hide trends, Avatar roundness, move header aside, and more!!
 @updateURL      https://codeberg.org/Freeplay/UserStyles/raw/branch/main/twitter/twitter-tweaks.user.css
 @preprocessor   stylus
@@ -57,14 +57,13 @@
 @var checkbox largerBottomBar "Larger Bottom Bar" 0
 @var checkbox bottomHeader    "Move header to bottom" 1
 
-@var text     haha            "💸 Haha, maybe?" '"https://www.patreon.com/freeplayg"'
+@var text     haha            "💸 Donate" '"https://www.patreon.com/freeplayg"'
 
 
 ==/UserStyle== */
 
-/* Update 1.3.0
-- Better Mobile Support
-- Improvements to uncrop images + other things
+/* Update 1.3.1
+- Quick fix for embed thumbnail stretching
 */
 @-moz-document domain("twitter.com") {
 	
@@ -366,9 +365,7 @@
 			border-color: transparent !important;
 		}
 		a.css-4rbku5 > .r-1adg3ll .css-9pa8cd {
-			border-bottom-left-radius: 16px;
-			border-bottom-right-radius: 16px;
-			
+			border-radius: 16px !important;
 		}
 	}
 	if noBorder == "Hide" {
@@ -412,6 +409,7 @@
 		}
 		a.css-4rbku5 > .r-1adg3ll .css-9pa8cd {
 			opacity: 1;
+            object-fit: cover;
 		}
 	}
 
@@ -596,13 +594,13 @@
 			transform: none !important;
 			if largerBottomBar {
 				bottom: 70px;
-			}
+			}   
 			&.r-1yse23k {
 				bottom: -55px;
 				if largerBottomBar {
 					bottom: 20px;
 				}
-			}
+			} 
 			if not centerTweet {
 				padding-right: 95px !important;
 			}
